--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
                 <i class="fa fa-clock-o"></i> ${updatedat}
                 <br /><br />
                 <div style="text-align: right">
-                <button class="btn btn-outline-secondary" style="border-radius: 48px; color: black; border: 3px solid lightgrey;padding: 10px 20px" href="${document.querySelector('.articletitle').getAttribute('href')}" onclick="${document.querySelector('.articletitle').getAttribute('onclick')}">阅读全文</button>
+                <button class="btn btn-outline-secondary" style="border-radius: 48px; color: black; border: 3px solid lightgrey;padding: 10px 20px" href="${document.querySelector('.articletitle').getAttribute('href')}" onclick="${element.querySelector('.articletitle').getAttribute('onclick')}">阅读全文</button>
                 </div></div>
               `)
             } catch (error) {
