--- a/index.html
+++ b/index.html
@@ -542,6 +542,48 @@
   <script src="https://unpkg.com/marked@7.0.5/marked.min.js"></script>
   <script src="https://unpkg.com/@highlightjs/cdn-assets@11.5.1/highlight.min.js"></script>
   <script>
+    // https://www.rfc-editor.org/rfc/rfc3986
+    mapList = [
+      [" ", "%20"],
+      ["+", "%2B"],
+      ["&", "%26"],
+      ["=", "%3D"],
+      ["<", "%3C"],
+      [">", "%3E"],
+      ["\"", "%22"],
+      ["#", "%23"],
+      [",", "%2C"],
+      ["%", "%25"],
+      ["{", "%7B"],
+      ["}", "%7D"],
+      ["|", "%7C"],
+      ["\\", "%5C"],
+      ["^", "%5E"],
+      ["~", "%7E"],
+      ["[", "%5B"],
+      ["]", "%5D"],
+      ["`", "%60"],
+      [";", "%3B"],
+      ["/", "%2F"],
+      ["?", "%3F"],
+      [":", "%3A"],
+      ["@", "%40"],
+      ["$", "%24"],
+    ];
+
+    function encode_filename(filename){
+      mapList.forEach(item => {
+        filename = filename.replaceAll(item[0], item[1]);
+      });
+      return filename;
+    }
+
+    function decode_filename(filename){
+      mapList.forEach(item => {
+        filename = filename.replaceAll(item[1], item[0]);
+      });
+      return filename;
+    }
     
     function loadJsDeferred(url, onload = () => {}) {
       const script = document.createElement('script');
@@ -1092,7 +1134,8 @@
     function render_article_list() {
       for (let i = 0; i < blog["文章列表"].length; i++) {
         if (blog["文章列表"][i]["是否置顶"] && currentArticleListPageOrder === 1) {
-          document.querySelector("#container").insertAdjacentHTML("beforeend", `<div class="article-item article-item-top" id="article-item-${i}"><div class="article-item-inner"><div class="article-item-sub"><i class="fa fa-thumb-tack"></i> 置顶文章</div><h2><a class="underline-animation" href="./index.html?type=article&filename=${blog["文章列表"][i]["文件名"]}" onclick="enter_article(${i});return false;">${blog["文章列表"][i]["文章标题"]}</a></h2></div></div>`);
+          let filename = encode_filename(blog["文章列表"][i]["文件名"]);
+          document.querySelector("#container").insertAdjacentHTML("beforeend", `<div class="article-item article-item-top" id="article-item-${i}"><div class="article-item-inner"><div class="article-item-sub"><i class="fa fa-thumb-tack"></i> 置顶文章</div><h2><a class="underline-animation" href="./index.html?type=article&filename=${filename}" onclick="enter_article(${i});return false;">${blog["文章列表"][i]["文章标题"]}</a></h2></div></div>`);
         }
       }
 
@@ -1107,8 +1150,8 @@
           blog["文章列表"][i]["是否置顶"]
         ) {
         } else {
-
-          document.querySelector("#container").insertAdjacentHTML("beforeend", `<div class="article-item" id="article-item-${i}" style="display:flex;"><div id="article-item-inner-${i}" class="article-item-inner"><h2><a class="underline-animation articletitle" href="./index.html?type=article&filename=${blog["文章列表"][i]["文件名"]}" onclick="enter_article(${i});return false;">${blog["文章列表"][i]["文章标题"]}</a></h2></div></div>`);
+          let filename = encode_filename(blog["文章列表"][i]["文件名"]);
+          document.querySelector("#container").insertAdjacentHTML("beforeend", `<div class="article-item" id="article-item-${i}" style="display:flex;"><div id="article-item-inner-${i}" class="article-item-inner"><h2><a class="underline-animation articletitle" href="./index.html?type=article&filename=${filename}" onclick="enter_article(${i});return false;">${blog["文章列表"][i]["文章标题"]}</a></h2></div></div>`);
 
 
           document.querySelector("#article-item-inner-" + i).insertAdjacentHTML("beforeend", `<div class="article-item-sub" id="article-item-sub-${i}"></div>`);
@@ -1639,7 +1682,8 @@
 
         for (let i = 0; i < blog["文章列表"].length; i++) {
           if (blog["文章列表"][i]["是否隐藏"] === false) {
-            document.querySelector("#tag-content").insertAdjacentHTML("beforeend", `<p><i class="fa fa-file-text-o"></i> <a href="./index.html?type=article&filename=${blog["文章列表"][i]["文件名"]}">${blog["文章列表"][i]["文章标题"]}</a>（<i class="fa fa-calendar"></i> ${langdata["ARTICLE_CREATEDAT"][lang_name]}${convertTimeStampToLocalTime(blog["文章列表"][i]["创建时间（时间戳）"])}，<i class="fa fa-clock-o"></i> ${langdata["LASTMODIFIEDAT"][lang_name]}${blog["文章列表"][i]["修改日期"]}）</p>`);
+            let filename = encode_filename(blog["文章列表"][i]["文件名"]);
+            document.querySelector("#tag-content").insertAdjacentHTML("beforeend", `<p><i class="fa fa-file-text-o"></i> <a href="./index.html?type=article&filename=${filename}">${blog["文章列表"][i]["文章标题"]}</a>（<i class="fa fa-calendar"></i> ${langdata["ARTICLE_CREATEDAT"][lang_name]}${convertTimeStampToLocalTime(blog["文章列表"][i]["创建时间（时间戳）"])}，<i class="fa fa-clock-o"></i> ${langdata["LASTMODIFIEDAT"][lang_name]}${blog["文章列表"][i]["修改日期"]}）</p>`);
 
           }
         }
@@ -1650,7 +1694,8 @@
           for (let i = 0; i < blog["文章列表"].length; i++) {
             if (blog["文章列表"][i]["是否隐藏"] === false) {
               if (blog["文章列表"][i]["标签"].length === 0 || blog["文章列表"][i]["标签"] === false || blog["文章列表"][i]["标签"] === "" || blog["文章列表"][i]["标签"] === undefined || blog["文章列表"][i]["标签"] === null) {
-                document.querySelector("#tag-content").insertAdjacentHTML("beforeend", `<p><i class="fa fa-file-text-o"></i> <a href="./index.html?type=article&filename=${blog["文章列表"][i]["文件名"]}">${blog["文章列表"][i]["文章标题"]}</a>（<i class="fa fa-calendar"></i> ${langdata["ARTICLE_CREATEDAT"][lang_name]}${convertTimeStampToLocalTime(blog["文章列表"][i]["创建时间（时间戳）"])}，<i class="fa fa-clock-o"></i> ${langdata["LASTMODIFIEDAT"][lang_name]}${blog["文章列表"][i]["修改日期"]}）</p>`);
+                let filename = encode_filename(blog["文章列表"][i]["文件名"]);
+                document.querySelector("#tag-content").insertAdjacentHTML("beforeend", `<p><i class="fa fa-file-text-o"></i> <a href="./index.html?type=article&filename=${filename}">${blog["文章列表"][i]["文章标题"]}</a>（<i class="fa fa-calendar"></i> ${langdata["ARTICLE_CREATEDAT"][lang_name]}${convertTimeStampToLocalTime(blog["文章列表"][i]["创建时间（时间戳）"])}，<i class="fa fa-clock-o"></i> ${langdata["LASTMODIFIEDAT"][lang_name]}${blog["文章列表"][i]["修改日期"]}）</p>`);
               }
 
             }
@@ -1921,7 +1966,8 @@
     }
 
     function enter_article(article_id) {
-      history.pushState({ type: "article", filename: blog["文章列表"][article_id]["文件名"] }, "", `./index.html?type=article&filename=${blog["文章列表"][article_id]["文件名"]}`);
+      let filename = encode_filename(blog["文章列表"][article_id]["文件名"]);
+      history.pushState({ type: "article", filename: blog["文章列表"][article_id]["文件名"] }, "", `./index.html?type=article&filename=${filename}`);
       document.getElementsByTagName("title")[0].innerHTML = `${blog["文章列表"][article_id]["文章标题"]} - ${blog["博客标题"]} `;
       resetPage();
       render_nav(false);
@@ -2363,7 +2409,7 @@
 
 
         if (getUrlArgs("type") === "article") {
-          let article_filename = decodeURIComponent(getUrlArgs("filename"));
+          let article_filename = decode_filename(decodeURIComponent(getUrlArgs("filename")));
           for (let i = 0; i < blog["文章列表"].length; i++) {
             if (blog["文章列表"][i]["文件名"] === article_filename) {
               success_locate_article_id = true;
